--- a/app/src/main/res/xml/widget_info_station.xml
+++ b/app/src/main/res/xml/widget_info_station.xml
@@ -7,7 +7,8 @@
     android:minHeight="40dp"
     android:minWidth="250dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="horizontal"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"
+
     tools:targetApi="jelly_bean_mr1"/>
